--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,7 @@
 <footer class=" mt-5 text-muted shadow-lg position-bottom">
-
-    <a href="#" class="nav-link"><p class="text-muted">Контакты </p></a>
-    <a href="#">Наверх</a>
-
+  <div class="container">
+    <div class="col">
+      <a href="#" class="nav-link"><p class="text-muted">Контакты </p></a>
+    </div>
+  </div>
 </footer>
