--- a/dresses/templates/dresses/create_edit_dress.html
+++ b/dresses/templates/dresses/create_edit_dress.html
@@ -1,40 +1,34 @@
 {% extends 'base.html' %}
+{% load dress_filter %}
 {% block title %}Создать платье{% endblock %}
 {% block content %}
 <main>
     <div class="container  m-5">
     <form class="row g-3" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div>
-          <button type="submit" class="btn btn-primary mb-3">Загрузить</button>
+      {% csrf_token %}
+      {% for field in dress_form %}
+        <div class="col-md-4">
+          {% if field.label|tranc_name != 'фото' %}
+            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+            <input type="text" class="form-control" id="{{ field.id_for_label }}" name="{{ field.name }}" value="{{ field.value|default_if_none:'' }}">
+          {% else %}
+            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+            <input type="file" class="form-control" alt="" id="{{ field.id_for_label }}" name="{{ field.name }}" value="{{ field.value|default_if_none:'' }}">
+          {% endif %}
+          {% if field.errors %}
+            <span class="form__error text-danger">{{ field.errors }}</span>
+          {%  endif %}
         </div>
-          <div class="col">
-            {% for field in dress_form %}
-            <div class="col-md-6">
-            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-            <input type="text" class="form-control" id="{{ field.id_for_label }}">
-            {% if field.errors %}
-              <span class="form__error text-danger">{{ field.errors }}</span>
-            {%  endif %}
-            </div>
-          {% endfor %}
-          </div>
-          <div class="col">
-          {{ image_formset.management_form }}
-          {% for form in image_formset %}
-          {% for field in form.visible_fields %}
+      {% endfor %}
 
-            <div class="col-md-6">
-            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-            <input type="file" class="form-control" id="{{ field.id_for_label }}" alt="">
-            {% if field.errors %}
-              <span class="form__error text-danger">{{ field.errors }}</span>
-            {%  endif %}
-            </div>
-          {% endfor %}
-          {% endfor %}
-          </div>
-
+      <div>
+        <button type="submit" class="btn btn-primary mb-3">Загрузить</button>
+      </div>
+      {% if dress_form.instance.id %}
+      <div>
+        <a href="{% url 'delete_dress' dress_form.instance.id %}" class="btn btn-danger mb-3">Удалить</a>
+      </div>
+      {% endif %}
     </form>
     </div>
 </main>
