--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,18 @@
 {% load humanize %}
 {% block content %}
 <main>
-    <div class="container mt-5">
+    <div class="container mt-3">
+<!--      <div style="background-image: url({% static 'dresses/images/back_main.jpg' %})">-->
       <h1 class="align-content-center mb-4">Аренда нарядных платьев для фотоссесий и мероприятий </h1>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-3 row-cols-sm-2 row-cols-md-3">
         {% for dress in dresses %}
           <div class="col">
             <div class="card w-75 shadow-sm">
-              {% for image in dress.images.all %}
-                <a href="{% url 'single_dress' dress.id %}">
-                  {% thumbnail image.image "400x400" upscale=True as im %}
-                    <img class=img-fluid src="{{ im.url }}"  alt="Photoplace" />
-                  {% endthumbnail %}
-                <a/>
-               {% endfor %}
+              <a href="{% url 'single_dress' dress.id %}">
+                {% thumbnail dress.image_1 "400x400" upscale=True as im %}
+                  <img class=img-fluid src="{{ im.url }}"  alt="Photoplace" />
+                {% endthumbnail %}
+              </a>
               <div class="card-body">
                 <h4 class="card-title">{{ dress.item}}</h4>
                 <div class="d-flex justify-content-between align-items-center">
@@ -29,6 +28,7 @@
             </div>
           </div>
         {% endfor %}
+      </div>
       </div>
     </div>
 </main>
