--- a/dresses/templates/dresses/create_edit_dress.html
+++ b/dresses/templates/dresses/create_edit_dress.html
@@ -3,33 +3,47 @@
 {% block title %}Создать платье{% endblock %}
 {% block content %}
 <main>
-    <div class="container  m-5">
-    <form class="row g-3" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      {% for field in dress_form %}
-        <div class="col-md-4">
+    <div class="container">
+      <div class="row">
+        <form class="col s12" method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="row">
+          {% for field in dress_form %}
           {% if field.label|tranc_name != 'фото' %}
-            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-            <input type="text" class="form-control" id="{{ field.id_for_label }}" name="{{ field.name }}" value="{{ field.value|default_if_none:'' }}">
+            <div class="col l6 m6 s12">
+              <div class="input-field l2">
+                <input id="{{ field.id_for_label }}" type="text" class="validate" name="{{ field.name }}" value="{{ field.value|default_if_none:'' }}">
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+              </div>
+            </div>
           {% else %}
-            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-            <input type="file" class="form-control" alt="" id="{{ field.id_for_label }}" name="{{ field.name }}" value="{{ field.value|default_if_none:'' }}">
+            {{ field.href }}
+            <div class="col l4 m12 s12">
+              <div class="input-field file-field ">
+                <div class="btn">
+                  <span>{{ field.label }}</span>
+                  <input type="file" id="{{ field.id_for_label }}" name="{{ field.name }}" >
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text" value="{{ field.value|default_if_none:'' }}" placeholder="Загрузить фото">
+                </div>
+              </div>
+            </div>
           {% endif %}
-          {% if field.errors %}
-            <span class="form__error text-danger">{{ field.errors }}</span>
-          {%  endif %}
-        </div>
-      {% endfor %}
-
-      <div>
-        <button type="submit" class="btn btn-primary mb-3">Загрузить</button>
+          {% endfor %}
+          </div>
+          <div class="row">
+            <div class="col l3 s12">
+              <button type="submit" class="btn cyan">Загрузить</button>
+            </div>
+            {% if dress_form.instance.id %}
+            <div class="col l3 s12">
+              <a href="{% url 'delete_dress' dress_form.instance.id %}" class="btn red">Удалить</a>
+            </div>
+            {% endif %}
+          </div>
+        </form>
       </div>
-      {% if dress_form.instance.id %}
-      <div>
-        <a href="{% url 'delete_dress' dress_form.instance.id %}" class="btn btn-danger mb-3">Удалить</a>
-      </div>
-      {% endif %}
-    </form>
     </div>
 </main>
 {% endblock %}
