--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,4 @@
 {% load static %}
-{% load thumbnail %}
-{% load static %}
 <!doctype html>
 <html lang="ru">
   <head>
@@ -8,17 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="">
     <title>{% block title %}Аренда детских нарядных платьев на фотосессию!{% endblock %}</title>
-     <link href="{% static "/assets/dist/css/bootstrap.min.css" %}" rel="stylesheet">
-
+    <link href="{% static '/materialize/css/materialize.css' %}" rel="stylesheet" type="text/css" media="screen,projection">
+    <link href="{% static '/materialize/css/style.css' %}" rel="stylesheet" type="text/css" media="screen,projection">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     {% include 'header.html' %}
+    <main>
     {% block content %}Основной сайт
     {% endblock %}
-
+    </main>
     {% include 'footer.html' %}
 
-    <script src="{% static "assets/dist/js/bootstrap.bundle.min.js" %}"></script>
+    <script src="{% static '/materialize/js/materialize.js' %}"></script>
+    <script src="{% static '/materialize/js/options.js' %}"></script>
+    <script src="{% static '/dresses/js/api/Api.js' %}"></script>
+    <script src="{% static '/dresses/js/components/MainCards.js' %}"></script>
+    <script src="{% static '/dresses/js/components/CardList.js' %}"></script>
+    <script src="{% static '/dresses/js/components/Header.js' %}"></script>
+    <script src="{% static '/dresses/js/components/Purchases.js' %}"></script>
+    <script src="{% static '/dresses/js/config/config.js' %}"></script>
+    <script src="{% static '/dresses/js/index.js' %}"></script>
+    <script src="{% static '/dresses/js/favorite.js' %}"></script>
 
   </body>
 </html>
