--- a/templates/header.html
+++ b/templates/header.html
@@ -1,39 +1,45 @@
 {% load static %}
-{% load thumbnail %}
 <header>
-  <div class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <nav>
     <div class="container">
-      <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center">
-        <strong>Happydress</strong>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse bg-white" id="navbarHeader">
-        <div class="container">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a href="#" class="nav-link active">Взять в аренду</a></li>
-            {% if user.is_staff %}
-              <li class="nav-item"><a href="#" class="nav-link">Платья</a></li>
-              <li class="nav-item"><a href="{% url 'create_dress' %}" class="nav-link">Добавить платье</a></li>
-            {% endif %}
-          <li class="nav-item">
-            <a href="https://www.instagram.com/happydress_msk/" class="nav-link active text-danger">
-              Наш инстаграм
-            </a>
-          </li>
-          </ul>
-          <ul class="navbar-nav justify-content-end">
-          {% if user.is_authenticated %}
-            <li class="nav-item"><a href="{% url 'password_change' %}" class="nav-link">Изменить пароль</a></li>
-            <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">Выход</a></li>
-          {% else %}
-            <li class="nav-item"><a href="{% url 'login' %}" class="nav-link">Войти</a></li>
-            <li class="nav-item"><a href="{% url 'signup' %}" class="btn btn-primary">Создать аккаунт</a></li>
-          {% endif %}
-          </ul>
-        </div>
+      <div class="nav-wrapper">
+        <a href="{% url 'index' %}" class="brand-logo center">Happydress</a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul id="nav-left-mobile" class="left hide-on-med-and-down">
+          <li><a href="{% url 'basket' %}">Взять в аренду<span class="new badge purple" id="counter">{{ count }}</span></a></li>
+        {% if user.is_staff %}
+          <li><a href="{% url 'create_dress' %}">Добавить платье</a></li>
+        {% endif %}
+          <li><a href="https://www.instagram.com/happydress_msk/">Мы в инстаграм</a></li>
+        </ul>
+        <ul id="nav-right-mobile" class="right hide-on-med-and-down">
+
+        {% if user.is_authenticated %}
+          <li><a href="{% url 'password_change' %}">Изменить пароль</a></li>
+          <li><a href="{% url 'logout' %}"><i class="material-icons">logout</i></a></li>
+        {% else %}
+          <li><a href="{% url 'login' %}"><i class="material-icons">login</i></a></li>
+          <li><a href="{% url 'signup' %}">Создать аккаунт</a></li>
+        {% endif %}
+        </ul>
       </div>
     </div>
-  </div>
+  </nav>
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="{% url 'basket' %}">Взять в аренду<span class="badge" id="counter">{{ count }}</span></a></li>
+  {% if user.is_staff %}
+    <li><a href="{% url 'create_dress' %}">Добавить платье</a></li>
+  {% endif %}
+    <li><a href="https://www.instagram.com/happydress_msk/">Мы в инстаграм</a></li>
+  {% if user.is_authenticated %}
+    <li><a href="{% url 'password_change' %}">Изменить пароль</a></li>
+    <li><a href="{% url 'logout' %}"><i class="material-icons">logout</i>Выход</a></li>
+  {% else %}
+    <li><a href="{% url 'login' %}"><i class="material-icons">login</i>Войти</a></li>
+    <li><a href="{% url 'signup' %}">Создать аккаунт</a></li>
+  {% endif %}
+  </ul>
+
+  <script src="{% static '/materialize/js/options.js' %}"></script>
+
 </header>
