--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Войти на сайт{% endblock %}
 {% load static %}
-{% block static %}<link href="{% static "/assets/dist/css/bootstrap.min.css" %}" rel="stylesheet">{% endblock %}
 {% block content %}
 <main class="main container">
     <div class="main__header">
@@ -30,7 +29,7 @@
                 </div>
             </div>
             <div class="form__footer">
-                <button type="submit" class="button button_style_blue">Войти</button>
+                <button type="submit" class="btn green">Войти</button>
                 <a class="form__forgot-link" href="{% url 'password_reset' %}">Забыли пароль?</a>
             </div>
         </form>
