--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% load user_filter %}
 {% block title %}Изменить пароль{% endblock %}
-{% block static %}<link rel="stylesheet" href="{% static 'pages/form.css' %}">{% endblock %}
 {% block content %}
 <main class="main container">
     <div class="main__header">
@@ -21,7 +20,7 @@
                 </div>
             </div>
             <div class="form__group">
-                <label for="{{ form.new_password1.id_for_labe }}" class="form__label">Новый пароль</label>
+                <label for="{{ form.new_password1.id_for_label }}" class="form__label">Новый пароль</label>
                 <div class="form__field-group">
                 {{ form.new_password1|addclass:'form__input' }}
                     <span class="form__input-info">Ваш пароль не должен совпадать с вашим именем или другой персональной информацией или быть слишком похожим на неё.</span>
@@ -44,7 +43,7 @@
                 </div>
             </div>
             <div class="form__footer">
-                <button class="button button_style_blue">Изменить пароль</button>
+                <button class="btn blue">Изменить пароль</button>
             </div>
         </form>
     </div>
