--- a/users/templates/registration/reg.html
+++ b/users/templates/registration/reg.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% load user_filter %}
 {% block title %}Регистрация{% endblock %}
-{% block static %}<link rel="stylesheet" href="{% static 'pages/form.css' %}">{% endblock %}
 {% block content %}
 <main class="main container">
     <div class="main__header">
@@ -25,7 +24,7 @@
             {% endfor %}
 
             <div class="form__footer">
-                <button class="button button_style_blue">Создать аккаунт</button>
+                <button class="btn cyan">Создать аккаунт</button>
             </div>
         </form>
     </div>
